[package]
name = "eth_indexer"
version = "0.1.0"
edition = "2018"

[dependencies]
actix-web = "3.4.0"
diesel = { version = "1.4.7", features = ["postgres"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
actix-service = "1.0"
actix-rt = "2.5"
actix-macro = "1.0"
